--- a/index.html
+++ b/index.html
@@ -26,167 +26,195 @@
   </head>
 
   <body>
+    <!-- /* //////////////шапка header/////////////////////////*/ -->
+
     <header class="header">
-      <a class="header-logo logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
-      <nav>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link current" href="./index.html">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li class="header-contacts-items">
-          <a class="header-contacts-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-contacts-items">
-          <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button btn" type="button">Заказать услугу</button>
-      </section>
-      <section class="features">
-        <h2 class="features-title hidden">Преимущества</h2>
-        <ul class="features-list list">
-          <li class="features-item">
-            <h3 class="features-item-title">Внимание к деталям</h3>
-            <p class="features-item-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-item-title">Пунктуальность</h3>
-            <p class="features-item-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-item-title">Планирование</h3>
-            <p class="features-item-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-item-title">Современные технологии</h3>
-            <p class="features-item-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="doing">
-        <h2 class="doing-title">Чем мы занимаемся</h2>
-        <ul class="doing-list list">
-          <li class="doing-item">
-            <img
-              class="doing-img"
-              src="./images/box1-min.jpg"
-              alt="Кодим"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              class="doing-img"
-              src="./images/box2-min.jpg"
-              alt="Программируем"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="doing-item">
-            <img
-              class="doing-img"
-              src="./images/box3-min.jpg"
-              alt="Разрабатываем"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </section>
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-member">
-            <img
-              class="team-member-img"
-              src="./images/img1-min.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-title">Игорь Демьяненко</h3>
-            <p class="team-member-text" lang="en">Product Designer</p>
-          </li>
-          <li class="team-member">
-            <img
-              class="team-member-img"
-              src="./images/img2-min.jpg"
-              alt="Ольга Репина"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-title">Ольга Репина</h3>
-            <p class="team-member-text" lang="en">Frontend Developer</p>
-          </li>
-          <li class="team-member">
-            <img
-              class="team-member-img"
-              src="./images/img3-min.jpg"
-              alt="Николай Тарасов"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-title">Николай Тарасов</h3>
-            <p class="team-member-text" lang="en">Marketing</p>
-          </li>
-          <li class="team-member">
-            <img
-              class="team-member-img"
-              src="./images/img4-min.jpg"
-              alt="Михаил Ермаков"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-title">Михаил Ермаков</h3>
-            <p class="team-member-text" lang="en">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a class="footer-logo logo link" lang="en" href=""><span>Web</span>Studio</a>
-      <address class="footer-address">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-link link address"
-              href="https://goo.gl/maps/47WSASrcaa9zfRm9A"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
+      <div class="container header-container">
+        <nav class="navigation">
+          <a class="header-logo logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link current" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts list">
+          <li class="header-contacts-items">
+            <a class="header-contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="header-contacts-items">
+            <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <!-- /* //////////////////hero герой/////////////////// */ -->
+
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-button btn" type="button">Заказать услугу</button>
+        </div>
+      </section>
+
+      <!-- /* //////////////Преимущества features/////////////////////////*/ -->
+
+      <section class="features">
+        <div class="container">
+          <h2 class="features-title hidden">Преимущества</h2>
+          <ul class="features-list list">
+            <li class="features-item">
+              <h3 class="features-item-title">Внимание к деталям</h3>
+              <p class="features-item-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-item-title">Пунктуальность</h3>
+              <p class="features-item-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-item-title">Планирование</h3>
+              <p class="features-item-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-item-title">Современные технологии</h3>
+              <p class="features-item-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- /* //////////////Чем мы занимаемся doing/////////////////////////*/ -->
+
+      <section class="doing">
+        <div class="container">
+          <h2 class="doing-title">Чем мы занимаемся</h2>
+          <ul class="doing-list list">
+            <li class="doing-item">
+              <img
+                class="doing-img"
+                src="./images/box1-min.jpg"
+                alt="Кодим"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                class="doing-img"
+                src="./images/box2-min.jpg"
+                alt="Программируем"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="doing-item">
+              <img
+                class="doing-img"
+                src="./images/box3-min.jpg"
+                alt="Разрабатываем"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- /* //////////////Наша команда team/////////////////////////*/ -->
+
+      <section class="team">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="team-member">
+              <img
+                class="team-member-img"
+                src="./images/img1-min.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-title">Игорь Демьяненко</h3>
+              <p class="team-member-text" lang="en">Product Designer</p>
+            </li>
+            <li class="team-member">
+              <img
+                class="team-member-img"
+                src="./images/img2-min.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-title">Ольга Репина</h3>
+              <p class="team-member-text" lang="en">Frontend Developer</p>
+            </li>
+            <li class="team-member">
+              <img
+                class="team-member-img"
+                src="./images/img3-min.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-title">Николай Тарасов</h3>
+              <p class="team-member-text" lang="en">Marketing</p>
+            </li>
+            <li class="team-member">
+              <img
+                class="team-member-img"
+                src="./images/img4-min.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-title">Михаил Ермаков</h3>
+              <p class="team-member-text" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <!-- /* //////////////футер footer/////////////////////////*/ -->
+
+    <footer class="footer">
+      <div class="container">
+        <a class="footer-logo logo link" lang="en" href=""><span>Web</span>Studio</a>
+        <address class="footer-address">
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a
+                class="footer-link link address"
+                href="https://goo.gl/maps/47WSASrcaa9zfRm9A"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
