--- a/portfolio.html
+++ b/portfolio.html
@@ -25,194 +25,209 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- /* //////////////шапка header/////////////////////////*/ -->
+
     <header class="header">
-      <a class="header-logo logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
-      <nav>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a class="header-link link" href="./index.html">Студия</a>
-          </li>
-          <li class="header-item">
-            <a class="header-link link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul class="header-contacts list">
-        <li class="header-contacts-items">
-          <a class="header-contacts-link link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="header-contacts-items">
-          <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </header>
-    <main>
-      <section class="projects">
-        <h1 class="projects-title hidden">Проекты</h1>
-        <ul class="projects-btn-list list">
-          <li class="projects-btn-item">
-            <button class="projects-button btn" type="button">Все</button>
-          </li>
-          <li class="projects-btn-item">
-            <button class="projects-button btn" type="button">Веб-сайты</button>
-          </li>
-          <li class="projects-btn-item">
-            <button class="projects-button btn" type="button">Приложения</button>
-          </li>
-          <li class="projects-btn-item">
-            <button class="projects-button btn" type="button">Дизайн</button>
-          </li>
-          <li class="projects-btn-item">
-            <button class="projects-button btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="projects-list list">
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio1-min.jpg"
-                alt="три человека"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title">Технокряк</h2>
-              <p class="projects-link-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio2-min.jpg"
-                alt="баскетболисты"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="projects-link-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio3-min.jpg"
-                alt="рыба"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="projects-link-text">Приложение</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio4-min.jpg"
-                alt="наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title">Проект <span lang="en">Prime</span></h2>
-              <p class="projects-link-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio5-min.jpg"
-                alt="коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title">Проект <span lang="en">Boxes</span></h2>
-              <p class="projects-link-text">Приложение</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio6-min.jpg"
-                alt="монитор"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title"><span lang="en">Inspiration has no Borders</span></h2>
-              <p class="projects-link-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio7-min.jpg"
-                alt="книга"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="projects-link-text">Дизайн</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio8-min.jpg"
-                alt="бирка"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title">Проект <span lang="en">LAB</span></h2>
-              <p class="projects-link-text">Маркетинг</p>
-            </a>
-          </li>
-          <li class="projects-item">
-            <a class="projects-link link" href="">
-              <img
-                class="projects-link-img"
-                src="./images/imgportfolio9-min.jpg"
-                alt="ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="projects-link-title"><span lang="en">Growing Business</span></h2>
-              <p class="projects-link-text">Приложение</p>
-            </a>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a class="footer-logo logo link" lang="en" href=""><span>Web</span>Studio</a>
-      <address class="footer-address">
-        <ul class="footer-list list">
-          <li class="footer-item">
-            <a
-              class="footer-link link address"
-              href="https://goo.gl/maps/47WSASrcaa9zfRm9A"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
+      <div class="container">
+        <nav>
+          <a class="header-logo logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link current" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="header-item"><a class="header-link link" href="">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts list">
+          <li class="header-contacts-items">
+            <a class="header-contacts-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
             >
           </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="footer-item">
-            <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="header-contacts-items">
+            <a class="header-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </address>
+      </div>
+    </header>
+    <main>
+      <!-- /* //////////////Проекты projects/////////////////////////*/ -->
+
+      <section class="projects">
+        <div class="container">
+          <h1 class="projects-title hidden">Проекты</h1>
+          <ul class="projects-btn-list list">
+            <li class="projects-btn-item">
+              <button class="projects-button btn" type="button">Все</button>
+            </li>
+            <li class="projects-btn-item">
+              <button class="projects-button btn" type="button">Веб-сайты</button>
+            </li>
+            <li class="projects-btn-item">
+              <button class="projects-button btn" type="button">Приложения</button>
+            </li>
+            <li class="projects-btn-item">
+              <button class="projects-button btn" type="button">Дизайн</button>
+            </li>
+            <li class="projects-btn-item">
+              <button class="projects-button btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="projects-list list">
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio1-min.jpg"
+                  alt="три человека"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">Технокряк</h2>
+                <p class="projects-link-text">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio2-min.jpg"
+                  alt="баскетболисты"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="projects-link-text">Дизайн</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio3-min.jpg"
+                  alt="рыба"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="projects-link-text">Приложение</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio4-min.jpg"
+                  alt="наушники"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">Проект <span lang="en">Prime</span></h2>
+                <p class="projects-link-text">Маркетинг</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio5-min.jpg"
+                  alt="коробки"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="projects-link-text">Приложение</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio6-min.jpg"
+                  alt="монитор"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">
+                  <span lang="en">Inspiration has no Borders</span>
+                </h2>
+                <p class="projects-link-text">Веб-сайт</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio7-min.jpg"
+                  alt="книга"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="projects-link-text">Дизайн</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio8-min.jpg"
+                  alt="бирка"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title">Проект <span lang="en">LAB</span></h2>
+                <p class="projects-link-text">Маркетинг</p>
+              </a>
+            </li>
+            <li class="projects-item">
+              <a class="projects-link link" href="">
+                <img
+                  class="projects-link-img"
+                  src="./images/imgportfolio9-min.jpg"
+                  alt="ноутбук"
+                  width="370"
+                  height="294"
+                />
+                <h2 class="projects-link-title"><span lang="en">Growing Business</span></h2>
+                <p class="projects-link-text">Приложение</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <!-- /* //////////////футер footer/////////////////////////*/ -->
+
+    <footer class="footer">
+      <div class="container">
+        <a class="footer-logo logo link" lang="en" href=""><span>Web</span>Studio</a>
+        <address class="footer-address">
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a
+                class="footer-link link address"
+                href="https://goo.gl/maps/47WSASrcaa9zfRm9A"
+                target="_blank"
+                rel="noopener noreferrer"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
