--- a/index.html
+++ b/index.html
@@ -58,17 +58,20 @@
       <!-- /* //////////////////hero герой/////////////////// */ -->
 
       <section class="hero">
-        <div class="container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <div class="container center">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
           <button class="hero-button btn" type="button">Заказать услугу</button>
         </div>
       </section>
 
       <!-- /* //////////////Преимущества features/////////////////////////*/ -->
 
-      <section class="features">
+      <section class="features section">
         <div class="container">
-          <h2 class="features-title hidden">Преимущества</h2>
+          <h2 class="features-title visually-hidden">Преимущества</h2>
           <ul class="features-list list">
             <li class="features-item">
               <h3 class="features-item-title">Внимание к деталям</h3>
@@ -100,7 +103,7 @@
 
       <!-- /* //////////////Чем мы занимаемся doing/////////////////////////*/ -->
 
-      <section class="doing">
+      <section class="doing section">
         <div class="container">
           <h2 class="doing-title">Чем мы занимаемся</h2>
           <ul class="doing-list list">
@@ -137,7 +140,7 @@
 
       <!-- /* //////////////Наша команда team/////////////////////////*/ -->
 
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list list">
