--- a/index.html
+++ b/index.html
@@ -152,8 +152,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-title">Игорь Демьяненко</h3>
-              <p class="team-member-text" lang="en">Product Designer</p>
+              <div class="member-name">
+                <h3 class="team-member-title">Игорь Демьяненко</h3>
+                <p class="team-member-text" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -163,8 +165,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-title">Ольга Репина</h3>
-              <p class="team-member-text" lang="en">Frontend Developer</p>
+              <div class="member-name">
+                <h3 class="team-member-title">Ольга Репина</h3>
+                <p class="team-member-text" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -174,8 +178,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-title">Николай Тарасов</h3>
-              <p class="team-member-text" lang="en">Marketing</p>
+              <div class="member-name">
+                <h3 class="team-member-title">Николай Тарасов</h3>
+                <p class="team-member-text" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-member">
               <img
@@ -185,8 +191,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-title">Михаил Ермаков</h3>
-              <p class="team-member-text" lang="en">UI Designer</p>
+              <div class="member-name">
+                <h3 class="team-member-title">Михаил Ермаков</h3>
+                <p class="team-member-text" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
