--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,8 @@
     <!-- /* //////////////шапка header/////////////////////////*/ -->
 
     <header class="header">
-      <div class="container">
-        <nav>
+      <div class="container header-container">
+        <nav class="navigation">
           <a class="header-logo logo link" lang="en" href="./index.html"><span>Web</span>Studio</a>
           <ul class="header-list list">
             <li class="header-item">
@@ -56,9 +56,9 @@
     <main>
       <!-- /* //////////////Проекты projects/////////////////////////*/ -->
 
-      <section class="projects">
+      <section class="project section">
         <div class="container">
-          <h1 class="projects-title hidden">Проекты</h1>
+          <h1 class="projects-title visually-hidden">Проекты</h1>
           <ul class="projects-btn-list list">
             <li class="projects-btn-item">
               <button class="projects-button btn" type="button">Все</button>
@@ -86,8 +86,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">Технокряк</h2>
-                <p class="projects-link-text">Веб-сайт</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">Технокряк</h2>
+                  <p class="projects-link-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -99,10 +101,12 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="projects-link-text">Дизайн</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="projects-link-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -114,8 +118,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">Ресторан <span lang="en">Seafood</span></h2>
-                <p class="projects-link-text">Приложение</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">Ресторан <span lang="en">Seafood</span></h2>
+                  <p class="projects-link-text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -127,8 +133,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">Проект <span lang="en">Prime</span></h2>
-                <p class="projects-link-text">Маркетинг</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">Проект <span lang="en">Prime</span></h2>
+                  <p class="projects-link-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -140,8 +148,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">Проект <span lang="en">Boxes</span></h2>
-                <p class="projects-link-text">Приложение</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">Проект <span lang="en">Boxes</span></h2>
+                  <p class="projects-link-text">Приложение</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -153,10 +163,12 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">
-                  <span lang="en">Inspiration has no Borders</span>
-                </h2>
-                <p class="projects-link-text">Веб-сайт</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">
+                    <span lang="en">Inspiration has no Borders</span>
+                  </h2>
+                  <p class="projects-link-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -168,8 +180,12 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">Издание <span lang="en">Limited Edition</span></h2>
-                <p class="projects-link-text">Дизайн</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">
+                    Издание <span lang="en">Limited Edition</span>
+                  </h2>
+                  <p class="projects-link-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -181,8 +197,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title">Проект <span lang="en">LAB</span></h2>
-                <p class="projects-link-text">Маркетинг</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title">Проект <span lang="en">LAB</span></h2>
+                  <p class="projects-link-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="projects-item">
@@ -194,8 +212,10 @@
                   width="370"
                   height="294"
                 />
-                <h2 class="projects-link-title"><span lang="en">Growing Business</span></h2>
-                <p class="projects-link-text">Приложение</p>
+                <div class="projects-name">
+                  <h2 class="projects-link-title"><span lang="en">Growing Business</span></h2>
+                  <p class="projects-link-text">Приложение</p>
+                </div>
               </a>
             </li>
           </ul>
